// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageHistory View it renders correctly 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  border: none;
  max-width: 800px;
  width: 100%;
}

.c1 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c2 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-style: solid;
  margin-right: 16px;
  color: #5E26FF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  font-family: "RT-Alias-Medium","system-ui","Segoe UI","Roboto",Helvetica;
  font-weight: 700;
  font-size: 1.5rem;
}

.c10 {
  width: 34;
  height: 34;
}

.c4 {
  color: #5E26FF;
  font-size: 1.25rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
}

.c14 {
  color: #262626;
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c16 {
  color: #666666;
  font-size: 1.25rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c20 {
  color: #262626;
  font-size: 1.25rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c21 {
  color: #666666;
  font-size: 1.25rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-bottom: 0;
}

.c24 {
  color: #5E26FF;
  font-size: 1.25rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  text-align: center;
  width: 100%;
}

.c13 {
  color: #262626;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c6 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c8 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c11 {
  list-style: none;
  margin: 0;
  padding: 0;
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c17 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-box-flex: 999;
  -webkit-flex-grow: 999;
  -ms-flex-positive: 999;
  flex-grow: 999;
}

.c18 {
  list-style: none;
  margin: 0;
  padding: 0;
  margin-left: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c22 {
  list-style: none;
  margin: 0;
  padding: 0;
  margin-left: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c9 {
  position: relative;
}

.c12 {
  overflow: hidden;
  width: 160px;
}

.c15 {
  margin-left: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 80px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  min-width: 0;
  box-sizing: border-box;
  border-radius: 4px;
  border: 1px solid;
  padding: 8px;
  padding-left: 24px;
  padding-right: 24px;
  margin-top: 8px;
  margin-bottom: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-color: #e8ecf7;
  background-color: #e8ecf7;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
}

.c5:hover {
  cursor: pointer;
  background-color: #EFF3FD;
}

.c23 {
  min-width: 0;
  box-sizing: border-box;
  border-radius: 4px;
  border: 1px solid;
  padding: 8px;
  padding-left: 24px;
  padding-right: 24px;
  margin-top: 8px;
  margin-bottom: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-color: #e8ecf7;
  background-color: #e8ecf7;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  cursor: pointer;
}

.c23:hover {
  cursor: pointer;
  background-color: #EFF3FD;
}

@media screen and (min-width:40em) {
  .c11 {
    margin-left: 24px;
  }
}

@media screen and (min-width:52em) {
  .c11 {
    margin-left: 32px;
  }
}

<div
  class="c0"
  width="100%"
>
  <div
    class="c1"
    display="flex"
  >
    <div
      class="c2"
      color="core.primary"
      display="flex"
      size="6"
    >
      <h3
        class="c3"
      >
        Tx
      </h3>
    </div>
    <p
      class="c4"
      color="core.primary"
      font-family="RT-Alias-Grotesk"
      font-size="3"
      font-weight="400"
    >
      Transaction History
    </p>
  </div>
  <div
    class="c5"
  >
    <ul
      class="c6"
    >
      <li
        class="c7"
        display="flex"
      >
        <ul
          class="c8"
          display="flex"
        >
          <li
            class="c9"
          >
            <svg
              class="c10"
              fill="none"
              height="34"
              viewBox="0 0 34 34"
              width="34"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#5E26FF"
                height="32"
                rx="16"
                width="32"
                x="1"
                y="1"
              />
              <path
                d="M16.4343 23.5657C16.7467 23.8781 17.2533 23.8781 17.5657 23.5657L22.6569 18.4745C22.9693 18.1621 22.9693 17.6556 22.6569 17.3431C22.3444 17.0307 21.8379 17.0307 21.5255 17.3431L17 21.8686L12.4745 17.3431C12.1621 17.0307 11.6556 17.0307 11.3431 17.3431C11.0307 17.6556 11.0307 18.1621 11.3431 18.4745L16.4343 23.5657ZM16.2 11L16.2 23L17.8 23L17.8 11L16.2 11Z"
                fill="#E8ECF7"
              />
              <rect
                height="32"
                rx="16"
                stroke="#5E26FF"
                stroke-width="1.4"
                width="32"
                x="1"
                y="1"
              />
            </svg>
          </li>
        </ul>
        <ul
          class="c11"
          display="flex"
        >
          <li
            class="c12"
            overflow="hidden"
            width="9"
          >
            <h4
              class="c13"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="2"
              font-weight="400"
            >
              From
            </h4>
            <p
              class="c14"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="4"
              font-weight="400"
            >
              t137s ... izpy
            </p>
          </li>
          <li
            class="c15"
            display="flex"
            width="8"
          >
            <p
              class="c16"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              Jan 12
            </p>
          </li>
        </ul>
      </li>
    </ul>
    <ul
      class="c17"
      display="flex"
    >
      <li
        class=""
      >
        <ul
          class="c18"
          display="flex"
        >
          <li
            class="c19"
            display="flex"
          >
            <p
              class="c20"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              0.0001
            </p>
          </li>
          <li
            class="c19"
            display="flex"
          >
            <p
              class="c21"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              &lt; 0.01
            </p>
          </li>
        </ul>
      </li>
      <li
        class=""
      >
        <ul
          class="c22"
          display="flex"
        >
          <li
            class=""
          >
            <p
              class="c20"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              FIL
            </p>
            <p
              class="c21"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              USD
            </p>
          </li>
        </ul>
      </li>
    </ul>
  </div>
  <div
    class="c5"
  >
    <ul
      class="c6"
    >
      <li
        class="c7"
        display="flex"
      >
        <ul
          class="c8"
          display="flex"
        >
          <li
            class="c9"
          >
            <svg
              class="c10"
              fill="none"
              height="34"
              viewBox="0 0 34 34"
              width="34"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#5E26FF"
                height="32"
                rx="16"
                width="32"
                x="1"
                y="1"
              />
              <path
                d="M16.4343 23.5657C16.7467 23.8781 17.2533 23.8781 17.5657 23.5657L22.6569 18.4745C22.9693 18.1621 22.9693 17.6556 22.6569 17.3431C22.3444 17.0307 21.8379 17.0307 21.5255 17.3431L17 21.8686L12.4745 17.3431C12.1621 17.0307 11.6556 17.0307 11.3431 17.3431C11.0307 17.6556 11.0307 18.1621 11.3431 18.4745L16.4343 23.5657ZM16.2 11L16.2 23L17.8 23L17.8 11L16.2 11Z"
                fill="#E8ECF7"
              />
              <rect
                height="32"
                rx="16"
                stroke="#5E26FF"
                stroke-width="1.4"
                width="32"
                x="1"
                y="1"
              />
            </svg>
          </li>
        </ul>
        <ul
          class="c11"
          display="flex"
        >
          <li
            class="c12"
            overflow="hidden"
            width="9"
          >
            <h4
              class="c13"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="2"
              font-weight="400"
            >
              From
            </h4>
            <p
              class="c14"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="4"
              font-weight="400"
            >
              t137s ... izpy
            </p>
          </li>
          <li
            class="c15"
            display="flex"
            width="8"
          >
            <p
              class="c16"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              Jan 12
            </p>
          </li>
        </ul>
      </li>
    </ul>
    <ul
      class="c17"
      display="flex"
    >
      <li
        class=""
      >
        <ul
          class="c18"
          display="flex"
        >
          <li
            class="c19"
            display="flex"
          >
            <p
              class="c20"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              0.0001
            </p>
          </li>
          <li
            class="c19"
            display="flex"
          >
            <p
              class="c21"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              &lt; 0.01
            </p>
          </li>
        </ul>
      </li>
      <li
        class=""
      >
        <ul
          class="c22"
          display="flex"
        >
          <li
            class=""
          >
            <p
              class="c20"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              FIL
            </p>
            <p
              class="c21"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              USD
            </p>
          </li>
        </ul>
      </li>
    </ul>
  </div>
  <div
    class="c5"
  >
    <ul
      class="c6"
    >
      <li
        class="c7"
        display="flex"
      >
        <ul
          class="c8"
          display="flex"
        >
          <li
            class="c9"
          >
            <svg
              class="c10"
              fill="none"
              height="34"
              viewBox="0 0 34 34"
              width="34"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#5E26FF"
                height="32"
                rx="16"
                width="32"
                x="1"
                y="1"
              />
              <path
                d="M16.4343 23.5657C16.7467 23.8781 17.2533 23.8781 17.5657 23.5657L22.6569 18.4745C22.9693 18.1621 22.9693 17.6556 22.6569 17.3431C22.3444 17.0307 21.8379 17.0307 21.5255 17.3431L17 21.8686L12.4745 17.3431C12.1621 17.0307 11.6556 17.0307 11.3431 17.3431C11.0307 17.6556 11.0307 18.1621 11.3431 18.4745L16.4343 23.5657ZM16.2 11L16.2 23L17.8 23L17.8 11L16.2 11Z"
                fill="#E8ECF7"
              />
              <rect
                height="32"
                rx="16"
                stroke="#5E26FF"
                stroke-width="1.4"
                width="32"
                x="1"
                y="1"
              />
            </svg>
          </li>
        </ul>
        <ul
          class="c11"
          display="flex"
        >
          <li
            class="c12"
            overflow="hidden"
            width="9"
          >
            <h4
              class="c13"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="2"
              font-weight="400"
            >
              From
            </h4>
            <p
              class="c14"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="4"
              font-weight="400"
            >
              t137s ... izpy
            </p>
          </li>
          <li
            class="c15"
            display="flex"
            width="8"
          >
            <p
              class="c16"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              Jan 12
            </p>
          </li>
        </ul>
      </li>
    </ul>
    <ul
      class="c17"
      display="flex"
    >
      <li
        class=""
      >
        <ul
          class="c18"
          display="flex"
        >
          <li
            class="c19"
            display="flex"
          >
            <p
              class="c20"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              0.0000001
            </p>
          </li>
          <li
            class="c19"
            display="flex"
          >
            <p
              class="c21"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              &lt; 0.01
            </p>
          </li>
        </ul>
      </li>
      <li
        class=""
      >
        <ul
          class="c22"
          display="flex"
        >
          <li
            class=""
          >
            <p
              class="c20"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              FIL
            </p>
            <p
              class="c21"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              USD
            </p>
          </li>
        </ul>
      </li>
    </ul>
  </div>
  <div
    class="c5"
  >
    <ul
      class="c6"
    >
      <li
        class="c7"
        display="flex"
      >
        <ul
          class="c8"
          display="flex"
        >
          <li
            class="c9"
          >
            <svg
              class="c10"
              fill="none"
              height="34"
              viewBox="0 0 34 34"
              width="34"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#5E26FF"
                height="32"
                rx="16"
                width="32"
                x="1"
                y="1"
              />
              <path
                d="M16.4343 23.5657C16.7467 23.8781 17.2533 23.8781 17.5657 23.5657L22.6569 18.4745C22.9693 18.1621 22.9693 17.6556 22.6569 17.3431C22.3444 17.0307 21.8379 17.0307 21.5255 17.3431L17 21.8686L12.4745 17.3431C12.1621 17.0307 11.6556 17.0307 11.3431 17.3431C11.0307 17.6556 11.0307 18.1621 11.3431 18.4745L16.4343 23.5657ZM16.2 11L16.2 23L17.8 23L17.8 11L16.2 11Z"
                fill="#E8ECF7"
              />
              <rect
                height="32"
                rx="16"
                stroke="#5E26FF"
                stroke-width="1.4"
                width="32"
                x="1"
                y="1"
              />
            </svg>
          </li>
        </ul>
        <ul
          class="c11"
          display="flex"
        >
          <li
            class="c12"
            overflow="hidden"
            width="9"
          >
            <h4
              class="c13"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="2"
              font-weight="400"
            >
              From
            </h4>
            <p
              class="c14"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="4"
              font-weight="400"
            >
              t137s ... izpy
            </p>
          </li>
          <li
            class="c15"
            display="flex"
            width="8"
          >
            <p
              class="c16"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              Jan 12
            </p>
          </li>
        </ul>
      </li>
    </ul>
    <ul
      class="c17"
      display="flex"
    >
      <li
        class=""
      >
        <ul
          class="c18"
          display="flex"
        >
          <li
            class="c19"
            display="flex"
          >
            <p
              class="c20"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              0.0001
            </p>
          </li>
          <li
            class="c19"
            display="flex"
          >
            <p
              class="c21"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              &lt; 0.01
            </p>
          </li>
        </ul>
      </li>
      <li
        class=""
      >
        <ul
          class="c22"
          display="flex"
        >
          <li
            class=""
          >
            <p
              class="c20"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              FIL
            </p>
            <p
              class="c21"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              USD
            </p>
          </li>
        </ul>
      </li>
    </ul>
  </div>
  <div
    class="c5"
  >
    <ul
      class="c6"
    >
      <li
        class="c7"
        display="flex"
      >
        <ul
          class="c8"
          display="flex"
        >
          <li
            class="c9"
          >
            <svg
              class="c10"
              fill="none"
              height="34"
              viewBox="0 0 34 34"
              width="34"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#5E26FF"
                height="32"
                rx="16"
                width="32"
                x="1"
                y="1"
              />
              <path
                d="M16.4343 23.5657C16.7467 23.8781 17.2533 23.8781 17.5657 23.5657L22.6569 18.4745C22.9693 18.1621 22.9693 17.6556 22.6569 17.3431C22.3444 17.0307 21.8379 17.0307 21.5255 17.3431L17 21.8686L12.4745 17.3431C12.1621 17.0307 11.6556 17.0307 11.3431 17.3431C11.0307 17.6556 11.0307 18.1621 11.3431 18.4745L16.4343 23.5657ZM16.2 11L16.2 23L17.8 23L17.8 11L16.2 11Z"
                fill="#E8ECF7"
              />
              <rect
                height="32"
                rx="16"
                stroke="#5E26FF"
                stroke-width="1.4"
                width="32"
                x="1"
                y="1"
              />
            </svg>
          </li>
        </ul>
        <ul
          class="c11"
          display="flex"
        >
          <li
            class="c12"
            overflow="hidden"
            width="9"
          >
            <h4
              class="c13"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="2"
              font-weight="400"
            >
              From
            </h4>
            <p
              class="c14"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="4"
              font-weight="400"
            >
              t137s ... izpy
            </p>
          </li>
          <li
            class="c15"
            display="flex"
            width="8"
          >
            <p
              class="c16"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              Jan 12
            </p>
          </li>
        </ul>
      </li>
    </ul>
    <ul
      class="c17"
      display="flex"
    >
      <li
        class=""
      >
        <ul
          class="c18"
          display="flex"
        >
          <li
            class="c19"
            display="flex"
          >
            <p
              class="c20"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              0.00001
            </p>
          </li>
          <li
            class="c19"
            display="flex"
          >
            <p
              class="c21"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              &lt; 0.01
            </p>
          </li>
        </ul>
      </li>
      <li
        class=""
      >
        <ul
          class="c22"
          display="flex"
        >
          <li
            class=""
          >
            <p
              class="c20"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              FIL
            </p>
            <p
              class="c21"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              USD
            </p>
          </li>
        </ul>
      </li>
    </ul>
  </div>
  <div
    class="c5"
  >
    <ul
      class="c6"
    >
      <li
        class="c7"
        display="flex"
      >
        <ul
          class="c8"
          display="flex"
        >
          <li
            class="c9"
          >
            <svg
              class="c10"
              fill="none"
              height="34"
              viewBox="0 0 34 34"
              width="34"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#5E26FF"
                height="32"
                rx="16"
                width="32"
                x="1"
                y="1"
              />
              <path
                d="M16.4343 23.5657C16.7467 23.8781 17.2533 23.8781 17.5657 23.5657L22.6569 18.4745C22.9693 18.1621 22.9693 17.6556 22.6569 17.3431C22.3444 17.0307 21.8379 17.0307 21.5255 17.3431L17 21.8686L12.4745 17.3431C12.1621 17.0307 11.6556 17.0307 11.3431 17.3431C11.0307 17.6556 11.0307 18.1621 11.3431 18.4745L16.4343 23.5657ZM16.2 11L16.2 23L17.8 23L17.8 11L16.2 11Z"
                fill="#E8ECF7"
              />
              <rect
                height="32"
                rx="16"
                stroke="#5E26FF"
                stroke-width="1.4"
                width="32"
                x="1"
                y="1"
              />
            </svg>
          </li>
        </ul>
        <ul
          class="c11"
          display="flex"
        >
          <li
            class="c12"
            overflow="hidden"
            width="9"
          >
            <h4
              class="c13"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="2"
              font-weight="400"
            >
              From
            </h4>
            <p
              class="c14"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="4"
              font-weight="400"
            >
              t137s ... izpy
            </p>
          </li>
          <li
            class="c15"
            display="flex"
            width="8"
          >
            <p
              class="c16"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              Jan 12
            </p>
          </li>
        </ul>
      </li>
    </ul>
    <ul
      class="c17"
      display="flex"
    >
      <li
        class=""
      >
        <ul
          class="c18"
          display="flex"
        >
          <li
            class="c19"
            display="flex"
          >
            <p
              class="c20"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              0.001
            </p>
          </li>
          <li
            class="c19"
            display="flex"
          >
            <p
              class="c21"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              &lt; 0.01
            </p>
          </li>
        </ul>
      </li>
      <li
        class=""
      >
        <ul
          class="c22"
          display="flex"
        >
          <li
            class=""
          >
            <p
              class="c20"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              FIL
            </p>
            <p
              class="c21"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              USD
            </p>
          </li>
        </ul>
      </li>
    </ul>
  </div>
  <div
    class="c5"
  >
    <ul
      class="c6"
    >
      <li
        class="c7"
        display="flex"
      >
        <ul
          class="c8"
          display="flex"
        >
          <li
            class="c9"
          >
            <svg
              class="c10"
              fill="none"
              height="34"
              viewBox="0 0 34 34"
              width="34"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#5E26FF"
                height="32"
                rx="16"
                width="32"
                x="1"
                y="1"
              />
              <path
                d="M16.4343 23.5657C16.7467 23.8781 17.2533 23.8781 17.5657 23.5657L22.6569 18.4745C22.9693 18.1621 22.9693 17.6556 22.6569 17.3431C22.3444 17.0307 21.8379 17.0307 21.5255 17.3431L17 21.8686L12.4745 17.3431C12.1621 17.0307 11.6556 17.0307 11.3431 17.3431C11.0307 17.6556 11.0307 18.1621 11.3431 18.4745L16.4343 23.5657ZM16.2 11L16.2 23L17.8 23L17.8 11L16.2 11Z"
                fill="#E8ECF7"
              />
              <rect
                height="32"
                rx="16"
                stroke="#5E26FF"
                stroke-width="1.4"
                width="32"
                x="1"
                y="1"
              />
            </svg>
          </li>
        </ul>
        <ul
          class="c11"
          display="flex"
        >
          <li
            class="c12"
            overflow="hidden"
            width="9"
          >
            <h4
              class="c13"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="2"
              font-weight="400"
            >
              From
            </h4>
            <p
              class="c14"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="4"
              font-weight="400"
            >
              t137s ... izpy
            </p>
          </li>
          <li
            class="c15"
            display="flex"
            width="8"
          >
            <p
              class="c16"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              Jan 12
            </p>
          </li>
        </ul>
      </li>
    </ul>
    <ul
      class="c17"
      display="flex"
    >
      <li
        class=""
      >
        <ul
          class="c18"
          display="flex"
        >
          <li
            class="c19"
            display="flex"
          >
            <p
              class="c20"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              0.0001
            </p>
          </li>
          <li
            class="c19"
            display="flex"
          >
            <p
              class="c21"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              &lt; 0.01
            </p>
          </li>
        </ul>
      </li>
      <li
        class=""
      >
        <ul
          class="c22"
          display="flex"
        >
          <li
            class=""
          >
            <p
              class="c20"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              FIL
            </p>
            <p
              class="c21"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              USD
            </p>
          </li>
        </ul>
      </li>
    </ul>
  </div>
  <div
    class="c5"
  >
    <ul
      class="c6"
    >
      <li
        class="c7"
        display="flex"
      >
        <ul
          class="c8"
          display="flex"
        >
          <li
            class="c9"
          >
            <svg
              class="c10"
              fill="none"
              height="34"
              viewBox="0 0 34 34"
              width="34"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#5E26FF"
                height="32"
                rx="16"
                width="32"
                x="1"
                y="1"
              />
              <path
                d="M16.4343 23.5657C16.7467 23.8781 17.2533 23.8781 17.5657 23.5657L22.6569 18.4745C22.9693 18.1621 22.9693 17.6556 22.6569 17.3431C22.3444 17.0307 21.8379 17.0307 21.5255 17.3431L17 21.8686L12.4745 17.3431C12.1621 17.0307 11.6556 17.0307 11.3431 17.3431C11.0307 17.6556 11.0307 18.1621 11.3431 18.4745L16.4343 23.5657ZM16.2 11L16.2 23L17.8 23L17.8 11L16.2 11Z"
                fill="#E8ECF7"
              />
              <rect
                height="32"
                rx="16"
                stroke="#5E26FF"
                stroke-width="1.4"
                width="32"
                x="1"
                y="1"
              />
            </svg>
          </li>
        </ul>
        <ul
          class="c11"
          display="flex"
        >
          <li
            class="c12"
            overflow="hidden"
            width="9"
          >
            <h4
              class="c13"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="2"
              font-weight="400"
            >
              From
            </h4>
            <p
              class="c14"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="4"
              font-weight="400"
            >
              t137s ... izpy
            </p>
          </li>
          <li
            class="c15"
            display="flex"
            width="8"
          >
            <p
              class="c16"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              Jan 12
            </p>
          </li>
        </ul>
      </li>
    </ul>
    <ul
      class="c17"
      display="flex"
    >
      <li
        class=""
      >
        <ul
          class="c18"
          display="flex"
        >
          <li
            class="c19"
            display="flex"
          >
            <p
              class="c20"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              &lt; 0.0000001
            </p>
          </li>
          <li
            class="c19"
            display="flex"
          >
            <p
              class="c21"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              &lt; 0.01
            </p>
          </li>
        </ul>
      </li>
      <li
        class=""
      >
        <ul
          class="c22"
          display="flex"
        >
          <li
            class=""
          >
            <p
              class="c20"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              FIL
            </p>
            <p
              class="c21"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              USD
            </p>
          </li>
        </ul>
      </li>
    </ul>
  </div>
  <div
    class="c5"
  >
    <ul
      class="c6"
    >
      <li
        class="c7"
        display="flex"
      >
        <ul
          class="c8"
          display="flex"
        >
          <li
            class="c9"
          >
            <svg
              class="c10"
              fill="none"
              height="34"
              viewBox="0 0 34 34"
              width="34"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#5E26FF"
                height="32"
                rx="16"
                width="32"
                x="1"
                y="1"
              />
              <path
                d="M16.4343 23.5657C16.7467 23.8781 17.2533 23.8781 17.5657 23.5657L22.6569 18.4745C22.9693 18.1621 22.9693 17.6556 22.6569 17.3431C22.3444 17.0307 21.8379 17.0307 21.5255 17.3431L17 21.8686L12.4745 17.3431C12.1621 17.0307 11.6556 17.0307 11.3431 17.3431C11.0307 17.6556 11.0307 18.1621 11.3431 18.4745L16.4343 23.5657ZM16.2 11L16.2 23L17.8 23L17.8 11L16.2 11Z"
                fill="#E8ECF7"
              />
              <rect
                height="32"
                rx="16"
                stroke="#5E26FF"
                stroke-width="1.4"
                width="32"
                x="1"
                y="1"
              />
            </svg>
          </li>
        </ul>
        <ul
          class="c11"
          display="flex"
        >
          <li
            class="c12"
            overflow="hidden"
            width="9"
          >
            <h4
              class="c13"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="2"
              font-weight="400"
            >
              From
            </h4>
            <p
              class="c14"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="4"
              font-weight="400"
            >
              t3wjx ... ooea
            </p>
          </li>
          <li
            class="c15"
            display="flex"
            width="8"
          >
            <p
              class="c16"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              Jan 12
            </p>
          </li>
        </ul>
      </li>
    </ul>
    <ul
      class="c17"
      display="flex"
    >
      <li
        class=""
      >
        <ul
          class="c18"
          display="flex"
        >
          <li
            class="c19"
            display="flex"
          >
            <p
              class="c20"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              0.005
            </p>
          </li>
          <li
            class="c19"
            display="flex"
          >
            <p
              class="c21"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              0.02
            </p>
          </li>
        </ul>
      </li>
      <li
        class=""
      >
        <ul
          class="c22"
          display="flex"
        >
          <li
            class=""
          >
            <p
              class="c20"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              FIL
            </p>
            <p
              class="c21"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              USD
            </p>
          </li>
        </ul>
      </li>
    </ul>
  </div>
  <div
    class="c5"
  >
    <ul
      class="c6"
    >
      <li
        class="c7"
        display="flex"
      >
        <ul
          class="c8"
          display="flex"
        >
          <li
            class="c9"
          >
            <svg
              class="c10"
              fill="none"
              height="34"
              viewBox="0 0 34 34"
              width="34"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#5E26FF"
                height="32"
                rx="16"
                width="32"
                x="1"
                y="1"
              />
              <path
                d="M16.4343 23.5657C16.7467 23.8781 17.2533 23.8781 17.5657 23.5657L22.6569 18.4745C22.9693 18.1621 22.9693 17.6556 22.6569 17.3431C22.3444 17.0307 21.8379 17.0307 21.5255 17.3431L17 21.8686L12.4745 17.3431C12.1621 17.0307 11.6556 17.0307 11.3431 17.3431C11.0307 17.6556 11.0307 18.1621 11.3431 18.4745L16.4343 23.5657ZM16.2 11L16.2 23L17.8 23L17.8 11L16.2 11Z"
                fill="#E8ECF7"
              />
              <rect
                height="32"
                rx="16"
                stroke="#5E26FF"
                stroke-width="1.4"
                width="32"
                x="1"
                y="1"
              />
            </svg>
          </li>
        </ul>
        <ul
          class="c11"
          display="flex"
        >
          <li
            class="c12"
            overflow="hidden"
            width="9"
          >
            <h4
              class="c13"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="2"
              font-weight="400"
            >
              From
            </h4>
            <p
              class="c14"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="4"
              font-weight="400"
            >
              t137s ... izpy
            </p>
          </li>
          <li
            class="c15"
            display="flex"
            width="8"
          >
            <p
              class="c16"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              Jan 12
            </p>
          </li>
        </ul>
      </li>
    </ul>
    <ul
      class="c17"
      display="flex"
    >
      <li
        class=""
      >
        <ul
          class="c18"
          display="flex"
        >
          <li
            class="c19"
            display="flex"
          >
            <p
              class="c20"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              0.0001
            </p>
          </li>
          <li
            class="c19"
            display="flex"
          >
            <p
              class="c21"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              &lt; 0.01
            </p>
          </li>
        </ul>
      </li>
      <li
        class=""
      >
        <ul
          class="c22"
          display="flex"
        >
          <li
            class=""
          >
            <p
              class="c20"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              FIL
            </p>
            <p
              class="c21"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              USD
            </p>
          </li>
        </ul>
      </li>
    </ul>
  </div>
  <div
    class="c5"
  >
    <ul
      class="c6"
    >
      <li
        class="c7"
        display="flex"
      >
        <ul
          class="c8"
          display="flex"
        >
          <li
            class="c9"
          >
            <svg
              class="c10"
              fill="none"
              height="34"
              viewBox="0 0 34 34"
              width="34"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#5E26FF"
                height="32"
                rx="16"
                width="32"
                x="1"
                y="1"
              />
              <path
                d="M16.4343 23.5657C16.7467 23.8781 17.2533 23.8781 17.5657 23.5657L22.6569 18.4745C22.9693 18.1621 22.9693 17.6556 22.6569 17.3431C22.3444 17.0307 21.8379 17.0307 21.5255 17.3431L17 21.8686L12.4745 17.3431C12.1621 17.0307 11.6556 17.0307 11.3431 17.3431C11.0307 17.6556 11.0307 18.1621 11.3431 18.4745L16.4343 23.5657ZM16.2 11L16.2 23L17.8 23L17.8 11L16.2 11Z"
                fill="#E8ECF7"
              />
              <rect
                height="32"
                rx="16"
                stroke="#5E26FF"
                stroke-width="1.4"
                width="32"
                x="1"
                y="1"
              />
            </svg>
          </li>
        </ul>
        <ul
          class="c11"
          display="flex"
        >
          <li
            class="c12"
            overflow="hidden"
            width="9"
          >
            <h4
              class="c13"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="2"
              font-weight="400"
            >
              From
            </h4>
            <p
              class="c14"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="4"
              font-weight="400"
            >
              t137s ... izpy
            </p>
          </li>
          <li
            class="c15"
            display="flex"
            width="8"
          >
            <p
              class="c16"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              Jan 12
            </p>
          </li>
        </ul>
      </li>
    </ul>
    <ul
      class="c17"
      display="flex"
    >
      <li
        class=""
      >
        <ul
          class="c18"
          display="flex"
        >
          <li
            class="c19"
            display="flex"
          >
            <p
              class="c20"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              0.00001
            </p>
          </li>
          <li
            class="c19"
            display="flex"
          >
            <p
              class="c21"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              &lt; 0.01
            </p>
          </li>
        </ul>
      </li>
      <li
        class=""
      >
        <ul
          class="c22"
          display="flex"
        >
          <li
            class=""
          >
            <p
              class="c20"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              FIL
            </p>
            <p
              class="c21"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              USD
            </p>
          </li>
        </ul>
      </li>
    </ul>
  </div>
  <div
    class="c5"
  >
    <ul
      class="c6"
    >
      <li
        class="c7"
        display="flex"
      >
        <ul
          class="c8"
          display="flex"
        >
          <li
            class="c9"
          >
            <svg
              class="c10"
              fill="none"
              height="34"
              viewBox="0 0 34 34"
              width="34"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#5E26FF"
                height="32"
                rx="16"
                width="32"
                x="1"
                y="1"
              />
              <path
                d="M16.4343 23.5657C16.7467 23.8781 17.2533 23.8781 17.5657 23.5657L22.6569 18.4745C22.9693 18.1621 22.9693 17.6556 22.6569 17.3431C22.3444 17.0307 21.8379 17.0307 21.5255 17.3431L17 21.8686L12.4745 17.3431C12.1621 17.0307 11.6556 17.0307 11.3431 17.3431C11.0307 17.6556 11.0307 18.1621 11.3431 18.4745L16.4343 23.5657ZM16.2 11L16.2 23L17.8 23L17.8 11L16.2 11Z"
                fill="#E8ECF7"
              />
              <rect
                height="32"
                rx="16"
                stroke="#5E26FF"
                stroke-width="1.4"
                width="32"
                x="1"
                y="1"
              />
            </svg>
          </li>
        </ul>
        <ul
          class="c11"
          display="flex"
        >
          <li
            class="c12"
            overflow="hidden"
            width="9"
          >
            <h4
              class="c13"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="2"
              font-weight="400"
            >
              From
            </h4>
            <p
              class="c14"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="4"
              font-weight="400"
            >
              t137s ... izpy
            </p>
          </li>
          <li
            class="c15"
            display="flex"
            width="8"
          >
            <p
              class="c16"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              Jan 12
            </p>
          </li>
        </ul>
      </li>
    </ul>
    <ul
      class="c17"
      display="flex"
    >
      <li
        class=""
      >
        <ul
          class="c18"
          display="flex"
        >
          <li
            class="c19"
            display="flex"
          >
            <p
              class="c20"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              0.00001
            </p>
          </li>
          <li
            class="c19"
            display="flex"
          >
            <p
              class="c21"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              &lt; 0.01
            </p>
          </li>
        </ul>
      </li>
      <li
        class=""
      >
        <ul
          class="c22"
          display="flex"
        >
          <li
            class=""
          >
            <p
              class="c20"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              FIL
            </p>
            <p
              class="c21"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              USD
            </p>
          </li>
        </ul>
      </li>
    </ul>
  </div>
  <div
    class="c5"
  >
    <ul
      class="c6"
    >
      <li
        class="c7"
        display="flex"
      >
        <ul
          class="c8"
          display="flex"
        >
          <li
            class="c9"
          >
            <svg
              class="c10"
              fill="none"
              height="34"
              viewBox="0 0 34 34"
              width="34"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#5E26FF"
                height="32"
                rx="16"
                width="32"
                x="1"
                y="1"
              />
              <path
                d="M16.4343 23.5657C16.7467 23.8781 17.2533 23.8781 17.5657 23.5657L22.6569 18.4745C22.9693 18.1621 22.9693 17.6556 22.6569 17.3431C22.3444 17.0307 21.8379 17.0307 21.5255 17.3431L17 21.8686L12.4745 17.3431C12.1621 17.0307 11.6556 17.0307 11.3431 17.3431C11.0307 17.6556 11.0307 18.1621 11.3431 18.4745L16.4343 23.5657ZM16.2 11L16.2 23L17.8 23L17.8 11L16.2 11Z"
                fill="#E8ECF7"
              />
              <rect
                height="32"
                rx="16"
                stroke="#5E26FF"
                stroke-width="1.4"
                width="32"
                x="1"
                y="1"
              />
            </svg>
          </li>
        </ul>
        <ul
          class="c11"
          display="flex"
        >
          <li
            class="c12"
            overflow="hidden"
            width="9"
          >
            <h4
              class="c13"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="2"
              font-weight="400"
            >
              From
            </h4>
            <p
              class="c14"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="4"
              font-weight="400"
            >
              t137s ... izpy
            </p>
          </li>
          <li
            class="c15"
            display="flex"
            width="8"
          >
            <p
              class="c16"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              Jan 12
            </p>
          </li>
        </ul>
      </li>
    </ul>
    <ul
      class="c17"
      display="flex"
    >
      <li
        class=""
      >
        <ul
          class="c18"
          display="flex"
        >
          <li
            class="c19"
            display="flex"
          >
            <p
              class="c20"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              0.0001
            </p>
          </li>
          <li
            class="c19"
            display="flex"
          >
            <p
              class="c21"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              &lt; 0.01
            </p>
          </li>
        </ul>
      </li>
      <li
        class=""
      >
        <ul
          class="c22"
          display="flex"
        >
          <li
            class=""
          >
            <p
              class="c20"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              FIL
            </p>
            <p
              class="c21"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              USD
            </p>
          </li>
        </ul>
      </li>
    </ul>
  </div>
  <div
    class="c5"
  >
    <ul
      class="c6"
    >
      <li
        class="c7"
        display="flex"
      >
        <ul
          class="c8"
          display="flex"
        >
          <li
            class="c9"
          >
            <svg
              class="c10"
              fill="none"
              height="34"
              viewBox="0 0 34 34"
              width="34"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#5E26FF"
                height="32"
                rx="16"
                width="32"
                x="1"
                y="1"
              />
              <path
                d="M16.4343 23.5657C16.7467 23.8781 17.2533 23.8781 17.5657 23.5657L22.6569 18.4745C22.9693 18.1621 22.9693 17.6556 22.6569 17.3431C22.3444 17.0307 21.8379 17.0307 21.5255 17.3431L17 21.8686L12.4745 17.3431C12.1621 17.0307 11.6556 17.0307 11.3431 17.3431C11.0307 17.6556 11.0307 18.1621 11.3431 18.4745L16.4343 23.5657ZM16.2 11L16.2 23L17.8 23L17.8 11L16.2 11Z"
                fill="#E8ECF7"
              />
              <rect
                height="32"
                rx="16"
                stroke="#5E26FF"
                stroke-width="1.4"
                width="32"
                x="1"
                y="1"
              />
            </svg>
          </li>
        </ul>
        <ul
          class="c11"
          display="flex"
        >
          <li
            class="c12"
            overflow="hidden"
            width="9"
          >
            <h4
              class="c13"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="2"
              font-weight="400"
            >
              From
            </h4>
            <p
              class="c14"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="4"
              font-weight="400"
            >
              t137s ... izpy
            </p>
          </li>
          <li
            class="c15"
            display="flex"
            width="8"
          >
            <p
              class="c16"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              Jan 12
            </p>
          </li>
        </ul>
      </li>
    </ul>
    <ul
      class="c17"
      display="flex"
    >
      <li
        class=""
      >
        <ul
          class="c18"
          display="flex"
        >
          <li
            class="c19"
            display="flex"
          >
            <p
              class="c20"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              0.0001
            </p>
          </li>
          <li
            class="c19"
            display="flex"
          >
            <p
              class="c21"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              &lt; 0.01
            </p>
          </li>
        </ul>
      </li>
      <li
        class=""
      >
        <ul
          class="c22"
          display="flex"
        >
          <li
            class=""
          >
            <p
              class="c20"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              FIL
            </p>
            <p
              class="c21"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              USD
            </p>
          </li>
        </ul>
      </li>
    </ul>
  </div>
  <div
    class="c5"
  >
    <ul
      class="c6"
    >
      <li
        class="c7"
        display="flex"
      >
        <ul
          class="c8"
          display="flex"
        >
          <li
            class="c9"
          >
            <svg
              class="c10"
              fill="none"
              height="34"
              viewBox="0 0 34 34"
              width="34"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#5E26FF"
                height="32"
                rx="16"
                width="32"
                x="1"
                y="1"
              />
              <path
                d="M16.4343 23.5657C16.7467 23.8781 17.2533 23.8781 17.5657 23.5657L22.6569 18.4745C22.9693 18.1621 22.9693 17.6556 22.6569 17.3431C22.3444 17.0307 21.8379 17.0307 21.5255 17.3431L17 21.8686L12.4745 17.3431C12.1621 17.0307 11.6556 17.0307 11.3431 17.3431C11.0307 17.6556 11.0307 18.1621 11.3431 18.4745L16.4343 23.5657ZM16.2 11L16.2 23L17.8 23L17.8 11L16.2 11Z"
                fill="#E8ECF7"
              />
              <rect
                height="32"
                rx="16"
                stroke="#5E26FF"
                stroke-width="1.4"
                width="32"
                x="1"
                y="1"
              />
            </svg>
          </li>
        </ul>
        <ul
          class="c11"
          display="flex"
        >
          <li
            class="c12"
            overflow="hidden"
            width="9"
          >
            <h4
              class="c13"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="2"
              font-weight="400"
            >
              From
            </h4>
            <p
              class="c14"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="4"
              font-weight="400"
            >
              t137s ... izpy
            </p>
          </li>
          <li
            class="c15"
            display="flex"
            width="8"
          >
            <p
              class="c16"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              Jan 12
            </p>
          </li>
        </ul>
      </li>
    </ul>
    <ul
      class="c17"
      display="flex"
    >
      <li
        class=""
      >
        <ul
          class="c18"
          display="flex"
        >
          <li
            class="c19"
            display="flex"
          >
            <p
              class="c20"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              0.00001
            </p>
          </li>
          <li
            class="c19"
            display="flex"
          >
            <p
              class="c21"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              &lt; 0.01
            </p>
          </li>
        </ul>
      </li>
      <li
        class=""
      >
        <ul
          class="c22"
          display="flex"
        >
          <li
            class=""
          >
            <p
              class="c20"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              FIL
            </p>
            <p
              class="c21"
              color="core.darkgray"
              font-family="RT-Alias-Grotesk"
              font-size="3"
              font-weight="400"
            >
              USD
            </p>
          </li>
        </ul>
      </li>
    </ul>
  </div>
  <div
    class="c23"
  >
    <p
      class="c24"
      color="core.primary"
      font-family="RT-Alias-Grotesk"
      font-size="3"
      font-weight="400"
      role="button"
      width="100%"
    >
      View More
    </p>
  </div>
</div>
`;

exports[`MessageHistory View it renders the message detail view after clicking on a message 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 4px;
  border-width: 1px;
  border-color: #999999;
  padding: 16px;
  margin-top: 8px;
  margin-bottom: 8px;
  margin-left: 8px;
  margin-right: 8px;
  display: inline-block;
  width: 300px;
  overflow: hidden;
  max-width: 560px;
}

.c2 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  min-width: 0;
  box-sizing: border-box;
  background-color: #5E26FF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-style: solid;
  border-color: #5E26FF;
  background-color: #5E26FF;
  color: #EFF3FD;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c12 {
  min-width: 0;
  box-sizing: border-box;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c15 {
  min-width: 0;
  box-sizing: border-box;
  margin-right: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c18 {
  min-width: 0;
  box-sizing: border-box;
  margin-top: 4px;
}

.c20 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c21 {
  min-width: 0;
  box-sizing: border-box;
  border-right: 1px solid;
  border-color: #999999;
  padding-left: 16px;
  padding-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-width: 160px;
  height: 64px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c23 {
  min-width: 0;
  box-sizing: border-box;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.c25 {
  min-width: 0;
  box-sizing: border-box;
  position: relative;
  border: 1px solid;
  border-radius: 1px;
  border-color: #999999;
  margin-top: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 160px;
}

.c26 {
  min-width: 0;
  box-sizing: border-box;
  border-color: #999999;
  border-right: 1px solid;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 24px;
  padding-right: 24px;
  color: #999999;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  max-width: 160px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  text-align: center;
}

.c28 {
  min-width: 0;
  box-sizing: border-box;
  display: inline-block;
  width: 100%;
}

.c29 {
  min-width: 0;
  box-sizing: border-box;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 80px;
  width: 100%;
}

.c30 {
  min-width: 0;
  box-sizing: border-box;
  position: absolute;
  left: -24px;
  bottom: -24px;
  z-index: 999;
  border: 1px solid;
  border-color: #999999;
  border-radius: 32px;
  padding-bottom: 4px;
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 2rem;
  font-family: "system-ui","Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
}

.c33 {
  min-width: 0;
  box-sizing: border-box;
  position: relative;
  border-top: 1px solid;
  border-color: #999999;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 80px;
}

.c35 {
  min-width: 0;
  box-sizing: border-box;
  margin-top: 32px;
  margin-left: 4px;
  margin-right: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c37 {
  min-width: 0;
  box-sizing: border-box;
  padding-left: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: right;
}

.c41 {
  min-width: 0;
  box-sizing: border-box;
  margin-top: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  font-family: "RT-Alias-Medium","system-ui","Segoe UI","Roboto",Helvetica;
  font-weight: 700;
  font-size: 1.5rem;
}

.c11 {
  width: 24;
  height: 24;
}

.c13 {
  width: 24px;
  height: 24px;
}

.c36 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c38 {
  color: #5E26FF;
  font-size: 2rem;
  font-weight: 700;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c40 {
  color: #666666;
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c7 {
  color: #5E26FF;
  font-size: 1.25rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin-left: 8px;
}

.c16 {
  color: #666666;
  font-size: 1.25rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin-top: 0;
  margin-bottom: 0;
  margin-right: 16px;
}

.c17 {
  font-size: 1.25rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin-top: 0;
  margin-bottom: 0;
}

.c14 {
  color: #1AD08F;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c22 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c27 {
  color: #262626;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c42 {
  color: #999999;
  text-align: left;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 4px;
}

.c43 {
  color: #999999;
  text-align: left;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  max-width: 160px;
  margin: 4px;
}

.c46 {
  color: #5E26FF;
  text-align: left;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 4px;
}

.c24 {
  min-width: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 8px;
  padding-right: 8px;
  border-radius: 1px;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  font-size: 1.125rem;
  text-align: right;
  cursor: text;
  background: transparent;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 16px;
  display: inline-block;
  height: 64px;
  width: 100%;
  border: 0;
  border-color: #999999;
  border-top-right-radius: 1px;
  border-bottom-right-radius: 1px;
}

.c24:hover {
  cursor: not-allowed;
}

.c24:focus {
  box-shadow: 0;
  outline: 0;
  background: #d1ddfa;
}

.c34 {
  min-width: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 8px;
  padding-right: 8px;
  border-radius: 1px;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  font-size: 1.125rem;
  text-align: right;
  cursor: text;
  background: transparent;
  background-color: #EFF3FD;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 16px;
  display: inline-block;
  height: 64px;
  width: 100%;
  border: 0;
  border-color: #999999;
  border-top-right-radius: 1px;
  border-bottom-right-radius: 1px;
}

.c34:hover {
  cursor: not-allowed;
}

.c34:focus {
  box-shadow: 0;
  outline: 0;
  background: #d1ddfa;
}

.c19 {
  display: inline-block;
  width: 100%;
  margin-top: 16px;
  border: 1px solid;
  border-color: #999999;
  border-radius: 1px;
}

.c32 {
  min-width: 0;
  box-sizing: border-box;
  top: 0px;
  left: 0px;
  border-color: #999999;
  padding-left: 16px;
  padding-right: 16px;
  background-color: #E4EBFC;
  color: #5E26FF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  min-width: 64px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 1.25rem;
  text-align: center;
  position: relative;
  background: #E4EBFC;
}

.c31 {
  min-width: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 8px;
  padding-right: 8px;
  border-radius: 1px;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  font-size: 1.125rem;
  text-align: right;
  cursor: text;
  background: transparent;
  font-size: 2rem;
  height: 100%;
  display: inline-block;
  width: 100%;
  border: 0;
  border-color: #999999;
  border-top-right-radius: 1px;
  border-bottom-right-radius: 1px;
  border-left: 0;
  background: transparent;
  -moz-appearance: textfield;
}

.c31:hover {
  cursor: not-allowed;
}

.c31:focus {
  box-shadow: 0;
  outline: 0;
  background: #d1ddfa;
}

.c31::-webkit-outer-spin-button,
.c31::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c45 {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-bottom: 2px solid #5E26FF00;
  color: #5E26FF;
  font-size: 1.25rem;
}

.c45:hover {
  border-bottom: 2px solid #5E26FF;
}

.c9 {
  outline: 0;
  border: 0;
  background: transparent;
  -webkit-transition: 0.24s ease-in-out;
  transition: 0.24s ease-in-out;
  cursor: pointer;
  display: inline-block;
  margin-left: 8px;
}

.c9:hover {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: auto;
  background-color: #EFF3FD;
}

.c10 {
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
}

.c39 {
  word-wrap: break-word;
}

.c44 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: no-wrap;
}

@media screen and (min-width:40em) {

}

@media screen and (min-width:52em) {

}

<div
  class="c0 c1"
  display="inline-block"
  overflow="hidden"
  width="300"
>
  <div
    class="c2"
    display="flex"
  >
    <div
      class="c3"
      display="flex"
    >
      <div
        class="c4"
        display="flex"
        height="6"
        width="6"
      >
        <div
          class="c5"
          color="background.screen"
          display="flex"
          size="6"
        >
          <h3
            class="c6"
          >
            Td
          </h3>
        </div>
      </div>
      <p
        class="c7"
        color="core.primary"
        font-family="RT-Alias-Grotesk"
        font-size="3"
        font-weight="400"
      >
        Transaction Details
      </p>
    </div>
    <div
      class="c8"
      display="flex"
    >
      <button
        class="c9 c10"
        display="inline-block"
        type="button"
      >
        <svg
          class="c11"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M19.7333 4.2669C19.3776 3.91103 18.801 3.91103 18.4453 4.2669L11.9994 10.7166L5.55552 4.26885C5.19986 3.91299 4.62323 3.91299 4.26757 4.26885C3.91191 4.62472 3.91191 5.20169 4.26757 5.55756L10.7115 12.0053L4.27793 18.4426C3.92228 18.7985 3.92228 19.3755 4.27793 19.7313C4.63359 20.0872 5.21022 20.0872 5.56587 19.7313L11.9994 13.294L18.435 19.7333C18.7906 20.0892 19.3672 20.0892 19.7229 19.7333C20.0786 19.3774 20.0786 18.8005 19.7229 18.4446L13.2874 12.0053L19.7333 5.5556C20.0889 5.19974 20.0889 4.62276 19.7333 4.2669Z"
            fill="#5E26FF"
            fill-rule="evenodd"
          />
        </svg>
      </button>
      <div
        class="c12"
        display="flex"
      >
        <svg
          class="c13"
          fill="none"
          height="24px"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="#1AD08F"
            height="12"
            width="12"
            x="4"
            y="8"
          />
        </svg>
        <h4
          class="c14"
          color="status.success.background"
          font-family="RT-Alias-Grotesk"
          font-size="2"
          font-weight="400"
        >
          RECEIVED
        </h4>
      </div>
      <div
        class="c15"
        display="flex"
      >
        <p
          class="c16"
          color="core.darkgray"
          font-family="RT-Alias-Grotesk"
          font-size="3"
          font-weight="400"
        >
          Jan 12
        </p>
        <p
          class="c17"
          font-family="RT-Alias-Grotesk"
          font-size="3"
          font-weight="400"
        >
          2:30PM
        </p>
      </div>
    </div>
  </div>
  <div
    class="c18"
  >
    <div
      class="c19"
    >
      <div
        class="c20"
        display="flex"
      >
        <div
          class="c21"
          display="flex"
          height="64px"
        >
          <h4
            class="c22"
            font-family="RT-Alias-Grotesk"
            font-size="2"
            font-weight="400"
          >
            From
          </h4>
        </div>
        <div
          class="c23"
          display="flex"
          width="100%"
        >
          <input
            class="c24"
            disabled=""
            display="inline-block"
            height="7"
            placeholder="f1..."
            value="t137sjdbgunloi7couiy4l5nc7pd6k2jmq32vizpy"
            width="100%"
          />
          
        </div>
      </div>
    </div>
    <div
      class="c19"
    >
      <div
        class="c20"
        display="flex"
      >
        <div
          class="c21"
          display="flex"
          height="64px"
        >
          <h4
            class="c22"
            font-family="RT-Alias-Grotesk"
            font-size="2"
            font-weight="400"
          >
            To
          </h4>
        </div>
        <div
          class="c23"
          display="flex"
          width="100%"
        >
          <input
            class="c24"
            disabled=""
            display="inline-block"
            height="7"
            placeholder="f1..."
            value="t137sjdbgunloi7couiy4l5nc7pd6k2jmq32vizpy"
            width="100%"
          />
          
        </div>
      </div>
    </div>
    <div
      class="c25"
      display="flex"
      label="Amount"
    >
      <div
        class="c26"
        color="input.border"
        display="flex"
        width="100%"
      >
        <h4
          class="c27"
          color="core.nearblack"
          font-family="RT-Alias-Grotesk"
          font-size="2"
          font-weight="400"
        >
          Amount
        </h4>
      </div>
      <div
        class="c28"
        display="inline-block"
        width="100%"
      >
        <div
          class="c29"
          display="flex"
          height="80px"
          width="100%"
        >
          <div
            class="c30"
            display="flex"
            font-family="sansSerif"
            font-size="5"
            size="6"
          >
            =
          </div>
          <input
            class="c31"
            disabled=""
            display="inline-block"
            font-size="5"
            height="100%"
            label="Amount"
            placeholder="0"
            step="0.000000000000000001"
            type="number"
            value="0.0001"
            width="100%"
          />
          <div
            class="c32"
            color="core.primary"
            display="flex"
            font-size="3"
            height="100%"
          >
            FIL
          </div>
        </div>
        <div
          class="c33"
          display="flex"
          height="80px"
        >
          <input
            class="c31"
            disabled=""
            display="inline-block"
            font-size="5"
            height="100%"
            min="0"
            placeholder="0"
            step="0.000000000000000001"
            type="number"
            value="0.0005"
            width="100%"
          />
          <div
            class="c32"
            color="core.primary"
            display="flex"
            font-size="3"
            height="100%"
          >
            USD
          </div>
        </div>
      </div>
    </div>
    <div
      class="c19"
    >
      <div
        class="c20"
        display="flex"
      >
        <div
          class="c21"
          display="flex"
          height="64px"
        >
          <h4
            class="c22"
            font-family="RT-Alias-Grotesk"
            font-size="2"
            font-weight="400"
          >
            Transfer Fee
          </h4>
        </div>
        <div
          class="c23"
          display="flex"
          width="100%"
        >
          <input
            class="c34"
            disabled=""
            display="inline-block"
            height="7"
            value="138"
            width="100%"
          />
          
        </div>
      </div>
    </div>
    <div
      class="c35"
      display="flex"
    >
      <h2
        class="c36"
        font-family="RT-Alias-Grotesk"
        font-size="4"
        font-weight="400"
      >
        Total
      </h2>
      <div
        class="c37"
        display="flex"
      >
        <h2
          class="c38 c39"
          color="core.primary"
          font-family="RT-Alias-Grotesk"
          font-size="5"
          font-weight="700"
        >
          0.000100000000000138
           
          FIL
        </h2>
        <h2
          class="c40"
          color="core.darkgray"
          font-family="RT-Alias-Grotesk"
          font-size="4"
          font-weight="400"
        >
          &lt; 0.01 USD
        </h2>
      </div>
    </div>
    <div
      class="c41"
      display="flex"
    >
      <h4
        class="c42"
        color="core.silver"
        font-family="RT-Alias-Grotesk"
        font-size="2"
        font-weight="400"
      >
        Message Hash
      </h4>
      <h4
        class="c43 c44"
        color="core.silver"
        font-family="RT-Alias-Grotesk"
        font-size="2"
        font-weight="400"
      >
        bafy2bzacea5463eugsz6f7dbwixzqxmwe2ouqeq6zukackb3xxotskdidqmjm
      </h4>
      <a
        class="c45"
        color="core.primary"
        font-size="3"
        href="https://filscout.io/en/pc/message/bafy2bzacea5463eugsz6f7dbwixzqxmwe2ouqeq6zukackb3xxotskdidqmjm"
        rel="noopener noreferrer"
        target="_blank"
      >
        <h4
          class="c46"
          color="core.primary"
          font-family="RT-Alias-Grotesk"
          font-size="2"
          font-weight="400"
        >
          View on Filscout
        </h4>
      </a>
    </div>
  </div>
</div>
`;
